# DreamsTech3

./: .gitignore  README.md
DreamsTech3/: .gitignore  CMakeLists.txt  DreamsTech3.sln  (+1 more)
DreamsTech3/DreamsTech3Engine/: CMakeLists.txt  DreamsTech3Engine.cpp  DreamsTech3Engine.h
DreamsTech3/DreamsTech3Engine/Editor/EditorReferences/: EditorReferences.cpp  EditorReferences.h
DreamsTech3/DreamsTech3Engine/Editor/EditorSettings/: EditorSettings.h
DreamsTech3/DreamsTech3Engine/Editor/Elements/Base/: IEditorElement.h
DreamsTech3/DreamsTech3Engine/Editor/Elements/EditBar/: EditBar.cpp  EditBar.h
DreamsTech3/DreamsTech3Engine/Editor/Manager/: EditorManager.cpp  EditorManager.h
DreamsTech3/DreamsTech3Engine/EngineState/Manager/: EngineStateManager.cpp  EngineStateManager.h
DreamsTech3/DreamsTech3Engine/EngineState/References/: EngineStateReferences.cpp  EngineStateReferences.h
DreamsTech3/DreamsTech3Engine/Enums/: EngineModes.h
DreamsTech3/DreamsTech3Engine/Enums/Components/: Shapes.h
DreamsTech3/DreamsTech3Engine/FileSystem/: FileSystem.h
DreamsTech3/DreamsTech3Engine/FrameWork/Custom Dependency Injection/: DIContainerExample.cpp  DIContainerInheritanceExample.cpp  DIContainerMacroExample.cpp
DreamsTech3/DreamsTech3Engine/FrameWork/CustomMessageBus/: BusNode.h  Message.h  MessageBus.h
DreamsTech3/DreamsTech3Engine/GamePlay/Entity/: GameObject.cpp  GameObject.fwd.h  GameObject.h  Object.cpp  Object.h
DreamsTech3/DreamsTech3Engine/Global/: GlobalObjects.cpp  GlobalObjects.h
DreamsTech3/DreamsTech3Engine/Settings/: GeneralSettings.cpp  GeneralSettings.h
(+55 files in other folders)
