# CMakeList.txt : CMake project for DreamsTech3Engine, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (DreamsTech3Engine "DreamsTech3Engine.cpp" "DreamsTech3Engine.h")

# TODO: Add tests and install targets if needed.
